# forgemaster

./: README.md  STANDING-INVITE-PLATO-MUD.md
for-fleet/: BOTTLE-FROM-FORGEMASTER-2026-04-22-GPU-FORGE-COMPLETE.md  BOTTLE-FROM-FORGEMASTER-2026-04-22-VRAM-BINNING-DISCOVERY.md  BOTTLE-FROM-FORGEMASTER-2026-04-23-API-FINDING.md  BOTTLE-FROM-FORGEMASTER-2026-04-23-EVENING.md  BOTTLE-FROM-FORGEMASTER-2026-04-23-SESSION-2.md  BOTTLE-FROM-FORGEMASTER-2026-04-23-TOOL-SPRINT.md  BOTTLE-FROM-FORGEMASTER-2026-04-24-NIGHTSHIFT-1.md  BOTTLE-FROM-FORGEMASTER-TO-JC1-2026-04-22-RTX-ADA-WARP-RESULTS.md  BOTTLE-FROM-FORGEMASTER-TO-JC1-2026-04-22-VRAM-EDGE-MODEL.md  BOTTLE-FROM-FORGEMASTER-TO-JC1-2026-04-22-WARP-SYNC.md  BOTTLE-FROM-FORGEMASTER-TO-ORACLE1-2026-04-21-GATEWAY-RESTART.md  BOTTLE-FROM-FORGEMASTER-TO-ORACLE1-2026-04-21-SECURITY-RESPONSE.md  BOTTLE-FROM-FORGEMASTER-TO-ORACLE1-2026-04-22-FORGE-DELIVERABLES.md  BOTTLE-FROM-FORGEMASTER-TO-ORACLE1-2026-04-23-DELIVERABLES.md  DEEPFAR-RESEARCH-NOTES.md  PLATO-BOOTCAMP-APPLIED-TO-FORGE.md
gpu-experiments/: QUANTIZATION-SUMMARY.md  lora-1.5b-results.json  lora-adapter-config.json
plato-kernel-constraints/: Cargo.toml
plato-kernel-constraints/src/: lib.rs
plato-soul-fingerprint/: README.md  pyproject.toml
plato-soul-fingerprint/src/plato_soul_fingerprint/: __init__.py  __main__.py  analysis.py  cli.py  ct_quantize.py  extractor.py  memory_auditor.py  reduction.py
plato-soul-fingerprint/src/plato_soul_fingerprint/features/: __init__.py  communication.py  dependency.py  philosophical.py  structural.py  stylistic.py  temporal.py
(+29 files in other folders)
