[package]
name = "plato-kernel-constraints"
version = "0.1.0"
edition = "2021"
description = "Constraint engine extracted from plato-kernel — first-person permission filtering with assertive markdown constraints"
license = "MIT"
repository = "https://github.com/SuperInstance/plato-kernel-constraints"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
