[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plato-soul-fingerprint"
version = "0.2.0"
description = "Extract a soul vector from a git repository — coding identity compression for the fleet"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Forgemaster", email = "forgemaster@cocapn.ai"}]
keywords = ["soul", "fingerprint", "code-style", "agent-identity", "fleet", "plato"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
plato-soul-fingerprint = "plato_soul_fingerprint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
